[AMEND] Added imperial red to colour palette (CSS and img)

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 :root {
     --oxford-blue: #002855ff;
     --usafa-blue: #0353a4ff;
+    --imperial-red: #eb3e3eff;
     --light-gray: #d6d6d6ff;
     --cultured: #fafafaff;
 }
