--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,21 @@ h1, h2, h3, h4, h5, h6 {
     background-color: var(--oxford-blue);
     opacity: 0.6;
 }
+
+.second-column ul {
+    list-style: none;
+    padding-top: 25px;
+    font-size: 2.1rem;
+    width: 75%;
+    margin: 0 auto;
+}
+
+.second-column ul a {
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.second-column ul a:hover {
+    background: var(--usafa-blue);
+}
