--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar {
     background: transparent;
+    padding: 5px;
+}
+
+@media (min-width: 992px) {
+    .navbar {
+        padding: 10px 20px;
+    }
 }
 
 .navbar-brand {
@@ -51,10 +58,21 @@ h1, h2, h3, h4, h5, h6 {
 .nav-link {
     color: var(--cultured);
     font-weight: 500;
-    margin-left: 15px;
+    margin-left: 2.5rem;
     font-size: 2.2rem;
 }
 
+.nav-link:hover, .nav-link:focus {
+    color: var(--cultured);
+    text-decoration: underline;
+}
+
 .navbar-toggler {
-    background: var(--cultured);
+    background: var(--usafa-blue);
+    border: 1px solid rgba(240, 240, 240, 0.5);
+    font-size: 2rem;
+}
+
+.navbar-toggler-icon {
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
 }
