--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Nav */
 
+.navigation {
+    z-index: 10;
+}
+
 .navbar {
     background: transparent;
     padding: 5px;
@@ -46,6 +50,10 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--cultured);
     font-weight: 700;
     font-size: 7.2rem;
+}
+
+.navbar-brand:hover {
+    color: var(--cultured);
 }
 
 @media (min-width: 992px){
@@ -75,4 +83,89 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-toggler-icon {
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+}
+
+/* main section */
+
+.column-1 {
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+}
+
+
+
+.main-section-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: var(--oxford-blue);
+    height: 100%;
+    width: 100%;
+    opacity: 0.75;
+}
+
+.column-2 {
+    height: auto;
+    padding: 125px 0 0 0;
+}
+
+.featured-album {
+    background: var(--usafa-blue);
+    width: 70%;
+    max-width: 530px;
+    margin: 75px auto;
+    padding: 15px 0 50px 0;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.featured-album-artist {
+    text-transform: uppercase;
+    font-size: 4rem;
+    font-weight: 500;
+    margin-bottom: -5px;
+}
+
+.featured-album-title {
+    font-size: 2.7rem;
+    margin-bottom: 3rem;
+}
+
+.featured-album-btn {
+    color: var(--cultured);
+    background: var(--oxford-blue);
+    padding: 15px 30px;
+    margin-bottom: 15px;
+    text-decoration: none;
+    font-size: 2.5rem;
+    min-width: 300px;
+}
+
+.featured-album-cover {
+    width: 70%;
+    margin: 0 auto;
+    border-radius: 10px;
+    overflow: hidden;
+    height: 350px;
+    position: relative;
+}
+
+.column-2 .cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("/assets/imgs/silurians.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
