--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar {
     background: transparent;
-    padding: 5px;
-}
-
-@media (min-width: 992px) {
-    .navbar {
-        padding: 10px 20px;
-    }
+    padding: .5rem;
 }
 
 .navbar-brand {
@@ -54,13 +48,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-brand:hover {
     color: var(--cultured);
-}
-
-@media (min-width: 992px){
-    .navbar-collapse {
-        display: flex;
-        justify-content: flex-end;
-    }
 }
 
 .nav-link {
@@ -81,19 +68,18 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 2rem;
 }
 
-.navbar-toggler-icon {
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+.fa-bars {
+    color: var(--cultured);
+    padding: 2px;
 }
 
-/* main section */
+/* Main Section */
 
-.column-1 {
+.column-start {
     position: relative;
     overflow: hidden;
     height: 100vh;
 }
-
-
 
 .main-section-bg {
     position: absolute;
@@ -113,26 +99,26 @@ h1, h2, h3, h4, h5, h6 {
     opacity: 0.75;
 }
 
-.column-2 {
+.column-end {
     height: auto;
-    padding: 125px 0 0 0;
+    padding: 12.5rem 0 0 0;
 }
 
 .featured-album {
     background: var(--usafa-blue);
     width: 70%;
-    max-width: 530px;
-    margin: 75px auto;
-    padding: 15px 0 50px 0;
+    max-width: 53rem;
+    margin: 7.5rem auto;
+    padding: 1.5rem 0 5rem 0;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 1rem;
 }
 
 .featured-album-artist {
     text-transform: uppercase;
     font-size: 4rem;
     font-weight: 500;
-    margin-bottom: -5px;
+    margin-bottom: -0.5rem;
 }
 
 .featured-album-title {
@@ -143,19 +129,19 @@ h1, h2, h3, h4, h5, h6 {
 .featured-album-btn {
     color: var(--cultured);
     background: var(--oxford-blue);
-    padding: 15px 30px;
-    margin-bottom: 15px;
+    padding: 1.5rem 3rem;
+    margin-bottom: 1.5rem;
     text-decoration: none;
     font-size: 2.5rem;
-    min-width: 300px;
+    min-width: 30rem;
 }
 
 .featured-album-cover {
     width: 70%;
     margin: 0 auto;
-    border-radius: 10px;
+    border-radius: 1rem;
     overflow: hidden;
-    height: 350px;
+    height: 35rem;
     position: relative;
 }
 
@@ -165,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url("/assets/imgs/silurians.jpg");
+    background-image: url("../imgs/silurians.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -176,20 +162,20 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 5.5rem;
     font-weight: 700;
     text-transform: uppercase;
-    padding: 15px 15px 45px 15px;
+    padding: 1.5rem 1.5rem 4.5rem 1.5rem;
 }
 
 .album-image {
     overflow: hidden;
     width: 100%;
-    height: 250px;
+    height: 25rem;
 }
 
 .album-info {
     background-color: var(--usafa-blue);
-    padding: 15px 20px;
-    border-radius: 0 0 5px 5px;
-    margin-bottom: 100px;
+    padding: 1.5rem 2rem;
+    border-radius: 0 0 .5rem .5rem;
+    margin-bottom: 10rem;
 }
 
 .album-name, .album-year {
@@ -199,4 +185,16 @@ h1, h2, h3, h4, h5, h6 {
 
 .album-name {
     font-size: 2rem;
+}
+
+/* Media queries*/
+
+@media (min-width: 992px) {
+    .navbar {
+        padding: 1rem 2rem;
+    }
+    .navbar-collapse {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
