--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -171,20 +172,42 @@ h1, h2, h3, h4, h5, h6 {
     height: 25rem;
 }
 
+.album-image > img {
+    width: 100%;
+    height: 100%;
+}
+
 .album-info {
     background-color: var(--usafa-blue);
     padding: 1.5rem 2rem;
     border-radius: 0 0 .5rem .5rem;
-    margin-bottom: 10rem;
+    margin-bottom: 3.5rem;
 }
 
 .album-name, .album-year {
     margin: 0;
-    font-size: 2rem;
 }
 
 .album-name {
+    font-size: 1.7rem;
+}
+
+.album-year {
+    font-weight: 500;
     font-size: 2rem;
+}
+
+.fab {
+    font-size: 2.2rem;
+    color: var(--cultured);
+}
+
+.fab:hover {
+    opacity: 0.7;
+}
+
+.fa-spotify {
+    margin-right: 1.5rem;
 }
 
 /* Media queries*/
