--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: Roboto Condensed;
 }
 
-.discography-title, .tour-title, .shop-title {
+.discography-title, .tour-title, .shop-title, .contact-title {
     font-size: 5.5rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -213,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Tour section */
 
 #tour-section {
-    min-height: 900px;
+    min-height: 90rem;
 }
 
 .tour-date {
@@ -238,7 +238,7 @@ h1, h2, h3, h4, h5, h6 {
 .tour-info {
     background: var(--usafa-blue);
     flex-grow: 8;
-    padding-left: 15px;
+    padding-left: 1.5rem;
 }
 
 .venue-name {
@@ -253,7 +253,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .tour-image {
     overflow: hidden;
-    height: 565px;
+    height: 56.5rem;
 }
 
 .tour-image img {
@@ -264,7 +264,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Shop Section */
 
 #shop-section {
-    min-height: 900px;
+    min-height: 90rem;
 }
 
 .shop-image-large {
@@ -296,6 +296,40 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--usafa-blue);
     background-color: var(--cultured);
     text-decoration: none;
+}
+
+/* Contact section */
+
+#contact-section {
+    min-height: 90rem;
+    padding: 5rem 1.5rem;
+}
+
+#contact-section form label {
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+
+#contact-section form input, #contact-section form textarea {
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 4px;
+    padding: 0.5rem;
+}
+
+#contact-section form textarea {
+    resize: none;
+}
+
+.contact-image {
+    height: 60rem;
+}
+
+.contact-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* Media queries*/
