--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Roboto+Condensed:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&family=Roboto+Condensed:wght@300;400;700&display=swap');
 
 /* Colours */
 :root {
@@ -24,10 +24,11 @@ body {
     background-color: var(--oxford-blue);
     color: var(--cultured);
     font-size: 1.6rem;
+    font-family: "Cabin", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Roboto Condensed;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 #discography-section, #tour-section, #shop-section, #contact-section {
