--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,11 +35,44 @@ h1, h2, h3, h4, h5, h6 {
     padding: 1.5rem;
 }
 
-.discography-title, .tour-title, .shop-title, .contact-title {
+.title {
     font-size: 5.5rem;
     font-weight: 700;
     text-transform: uppercase;
     padding: 1.5rem 1.5rem 2rem 1.5rem;
+}
+
+label {
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+
+input, textarea {
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 4px;
+    padding: 0.5rem;
+}
+
+textarea {
+    resize: none;
+}
+
+input[type="submit"] {
+    background: var(--usafa-blue);
+    color: var(--cultured);
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 2.5rem;
+    padding: 1.5rem 4rem;
+    transition: all 0.3s ease;
+}
+
+input[type="submit"]:hover, 
+input[type="submit"]:focus {
+    background: var(--cultured);
+    color: var(--usafa-blue);
 }
 
 /* Nav */
@@ -301,38 +334,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Contact section */
-
-#contact-section form label {
-    font-weight: 500;
-    text-transform: uppercase;
-    font-size: 2rem;
-}
-
-#contact-section form input, #contact-section form textarea {
-    margin-bottom: 2rem;
-    border: none;
-    border-radius: 4px;
-    padding: 0.5rem;
-}
-
-#contact-section form textarea {
-    resize: none;
-}
-
-#contact-section form input[type="submit"] {
-    background: var(--usafa-blue);
-    color: var(--cultured);
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 2.5rem;
-    padding: 1.5rem 4rem;
-    transition: all 0.3s ease;
-}
-
-#contact-section form input[type="submit"]:hover, #contact-section form input[type="submit"]:focus {
-    background: var(--cultured);
-    color: var(--usafa-blue);
-}
 
 .contact-image {
     height: 60rem;
