--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    scroll-padding: 0.5rem;
 }
 
 body {
@@ -31,15 +32,11 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Roboto Condensed", sans-serif;
 }
 
-#discography-section, #tour-section, #shop-section, #contact-section {
-    padding: 1.5rem;
-}
-
 .title {
     font-size: 5.5rem;
     font-weight: 700;
     text-transform: uppercase;
-    padding: 1.5rem 1.5rem 2rem 1.5rem;
+    padding: 0 1.5rem 2rem 1.5rem;
 }
 
 label {
@@ -363,10 +360,10 @@ input[type="submit"]:focus {
 
 @media (min-width: 992px) {
     #discography-section, #tour-section, #shop-section, #contact-section {
-        padding: 5rem 1.5rem;
+        padding: 1.5rem 1.5rem 5rem 1.5rem;
     }
     .discography-title, .tour-title, .shop-title, .contact-title {
-        padding: 1.5rem 4.5rem 2rem 1.5rem;
+        padding: 0 4.5rem 2rem 1.5rem;
     }
     .navbar {
         padding: 1rem 2rem;
